- Variable $extraButtons in the params.php file adds buttons on the authentication panel. The value has to be associated
  array, and the key is button name and the value is moving URL. It assumes that the OAuth button to authenticating.
- 2-factor authentication is supported with e-mail notification. Also the authentication processes are refactored.
- [BUG FIX] On the Ver.12, SAML authentication didn't work in spite of Ver.11 can do. It didn't check with SAML manual
  test on Ver.12 after added types to php codes. Ver.13 works SAML.

Ver.12 (Februrary 06, 2024)
- PHP Ver.7.4 is the minimum version.
- Type description added to most PHP code. The Export class and the OperationLogExtension class are added types, and
  your inherited class has to add them. The extending-class based methods didn't add types.
- Checking with PHPStan and other static analyser.
- The schema generating feature works with activating the variable $activateGenerator in params.php.
- INTERMediator.prepareToScrollBack and scrollBack methods are for retrieving scroll position on backing from detail.
  samples/Sample_forDebugging/longlist.html is a sample of these methods.
- On query condition, the value surrounded by @ is handled with the field name. For example, {field: "a", value: "b"}
  generates the where clause `a` = "b", otherwise {field: "a", value: "@b@"} generates `a` = `b`.
- Forever booted the service server, but it replaced with nodaemon. $stopSSEveryQuit in params.php doesn't work anymore.
- /spec/Manual-Tests/End-to-End-Test.md is added, and it records the result of manual end-to-end tests.
- INTERMediator.clearCondition method clears page number of pagination. Also no parameter clears all conditions.
- [INFO] In the Ver.9, the following change was made with compatibility. The setUpdatedRecord method doesn't call the
  setDataToUpdatedRecord anymore.
  - (Ver.9) The setUpdatedRecord method in database classes renamed to setDataToUpdatedRecord. For the compatibility,